Changed photo and added proper links to the projects and did little bit addition in javascript, so that nav closes on click on links

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       </div>
       <nav class="header__nav">
         <ul class="header__ul">
-          <li><a href="/">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li class="nav_item"><a href="/">Home</a></li>
+          <li class="nav_item"><a href="#about">About</a></li>
+          <li class="nav_item"><a href="#skills">Skills</a></li>
+          <li class="nav_item"><a href="#projects">Projects</a></li>
+          <li class="nav_item"><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -34,7 +34,7 @@
             <span class="nowrap"> Tarun Chawla </span>
           </h2>
           <figure class="hero__figure">
-            <img src="img/avtar1.jpg" alt="avtar" width="400" height="400" />
+            <img src="img/avtar.jpg" alt="avtar" width="400" height="400" />
             <figcaption class="offscreen">My avatar</figcaption>
           </figure>
         </section>
@@ -44,14 +44,14 @@
         <h2 class="about__h2 center">About</h2>
         <section class="about__section">
           <figure>
-            <img src="img/avtar1.jpg" alt="img" width="400" height="400" />
+            <img src="img/about.jpg" alt="about img" width="400" height="400" />
           </figure>
           <section class="about__text">
             <p class="about__info">
-              "I am a student at georgian college toronto, persuing diploma in
+              I am a student at georgian college toronto, persuing diploma in
               Computer Programming. I am really interested in technologies and
               how they are created. I have worked with languages like Python,
-              C/C++ and also made games and other Projects in Python."
+              C/C++ and also made games and other Projects in Python.
             </p>
             <a type="download" target="_blank" href="CV.pdf">My CV</a>
           </section>
@@ -61,7 +61,7 @@
         <h2 class="skills__h2 center">My Skills</h2>
         <div class="skills__container">
           <div class="skill">
-            <img src="img/python.PNG" alt="python" width="80" height="80" />
+            <img src="img/python.png" alt="python" width="80" height="80" />
             <p class="skill__text center">python</p>
           </div>
           <div class="skill">
@@ -124,7 +124,11 @@
               final paddle, In the project.
             </p>
             <div class="card__button">
-              <a href="https://youtube.com" target="_blank">Github</a>
+              <a
+                href="https://github.com/Tarun193/AI-Flappy-bird"
+                target="_blank"
+                >Github</a
+              >
             </div>
           </div>
           <div class="projects__card">
@@ -143,12 +147,14 @@
               perfect.That is the final bird, In the project.
             </p>
             <div class="card__button">
-              <a href="https://youtube.com" target="_blank">Github</a>
+              <a href="https://github.com/Tarun193/Pong-Game" target="_blank"
+                >Github</a
+              >
             </div>
           </div>
           <div class="projects__card">
             <img
-              src="img/typing.JPG"
+              src="img/typing.jpg"
               alt="project image"
               width="300"
               height="300"
@@ -160,12 +166,14 @@
               speed got calculate.
             </p>
             <div class="card__button">
-              <a href="https://youtube.com" target="_blank">Github</a>
+              <a href="https://github.com/Tarun193/Typing-Speed" target="_blank"
+                >Github</a
+              >
             </div>
           </div>
           <div class="projects__card">
             <img
-              src="img/hand.JPG"
+              src="img/BFS.jpg"
               alt="project image"
               width="300"
               height="300"
