--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h2 class="skills__h2 center">My Skills</h2>
         <div class="skills__container">
           <div class="skill">
-            <img src="img/python.png" alt="python" width="80" height="80" />
+            <img src="img/py.png" alt="python" width="80" height="80" />
             <p class="skill__text center">python</p>
           </div>
           <div class="skill">
@@ -133,7 +133,7 @@
           </div>
           <div class="projects__card">
             <img
-              src="img/pong.jpg"
+              src="img/ponggame.jpg"
               alt="project image"
               width="300"
               height="300"
@@ -154,7 +154,7 @@
           </div>
           <div class="projects__card">
             <img
-              src="img/typing.jpg"
+              src="img/typetest.jpg"
               alt="project image"
               width="300"
               height="300"
