Corrected the hove link issue

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <nav class="header__nav">
         <ul class="header__ul">
-          <li class="nav_item"><a href="/">Home</a></li>
+          <li class="nav_item"><a href="/Portfolio">Home</a></li>
           <li class="nav_item"><a href="#about">About</a></li>
           <li class="nav_item"><a href="#skills">Skills</a></li>
           <li class="nav_item"><a href="#projects">Projects</a></li>
