added social media in footer and changed cv

--- a/index.html
+++ b/index.html
@@ -65,14 +65,6 @@
             <p class="skill__text center">python</p>
           </div>
           <div class="skill">
-            <img src="img/html.png" alt="HTML" width="80" height="80" />
-            <p class="skill__text center">HTML</p>
-          </div>
-          <div class="skill">
-            <img src="img/css.png" alt="CSS" width="80" height="80" />
-            <p class="skill__text">CSS</p>
-          </div>
-          <div class="skill">
             <img src="img/C.png" alt="C and C++" width="80" height="80" />
             <p class="skill__text">C/C++</p>
           </div>
@@ -84,6 +76,18 @@
               height="80"
             />
             <p class="skill__text">Photoshop</p>
+          </div>
+          <div class="skill">
+            <img src="img/html.png" alt="HTML" width="80" height="80" />
+            <p class="skill__text center">HTML</p>
+          </div>
+          <div class="skill">
+            <img src="img/css.png" alt="CSS" width="80" height="80" />
+            <p class="skill__text">CSS</p>
+          </div>
+          <div class="skill">
+            <img src="img/js.png" alt="JavaScript" width="80" height="80" />
+            <p class="skill__text">JavaScript</p>
           </div>
           <div class="skill">
             <img
@@ -101,6 +105,10 @@
           <div class="skill">
             <img src="img/SQL.png" alt="SQL" width="80" height="80" />
             <p class="skill__text">SQL</p>
+          </div>
+          <div class="skill">
+            <img src="img/github.png" alt="Github" width="80" height="80" />
+            <p class="skill__text">Github</p>
           </div>
         </div>
       </article>
@@ -197,7 +205,7 @@
 
       <article class="contact" id="contact">
         <h2 class="contact__h2 center">Contant Me 😉</h2>
-        <form action="">
+        <form>
           <p>
             <label for="firstname">First Name</label>
             <input type="text" name="firstname" id="firstname" />
@@ -210,14 +218,51 @@
             <label for="message">Your message</label>
             <textarea name="message" id="message" rows="10"></textarea>
           </p>
-          <button type="submit" class="form__submit" formaction="/">
+          <button type="submit" id="form-button" class="form__submit">
             Submit
           </button>
         </form>
       </article>
     </main>
     <footer class="footer center">
-      <div class="footer__social-media"></div>
+      <section class="footer__social-media">
+        <div>
+          <a
+            href="https://www.linkedin.com/in/tarun-chawla-4986291ab/"
+            title="linkedin profile"
+          >
+            <img
+              src="img/linkedin.png"
+              alt="linkedin"
+              width="70px"
+              height="70px"
+            />
+          </a>
+        </div>
+        <div>
+          <a href="https://github.com/Tarun193" title="github profile">
+            <img
+              src="img/footer-github.png"
+              alt="github"
+              width="70px"
+              height="70px"
+            />
+          </a>
+        </div>
+        <div>
+          <a
+            href="https://leetcode.com/TarunChawla7463/"
+            title="leetcode profile"
+          >
+            <img
+              src="img/leetcode.png"
+              alt="github"
+              width="70px"
+              height="70px"
+            />
+          </a>
+        </div>
+      </section>
       <p>&copy; Tarun Chawla</p>
     </footer>
     <script src="index.js"></script>
