Some minor changes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               how they are created. I have worked with languages like Python,
               C/C++ and also made games and other Projects in Python.
             </p>
-            <a type="download" target="_blank" href="CV.pdf">My CV</a>
+            <a type="download" target="_blank" href="Resume.pdf">My Resume</a>
           </section>
         </section>
       </article>
