--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </figure>
           <section class="about__text">
             <p class="about__info">
-              I am a student at georgian college toronto, persuing diploma in
+              I am a student at Georgian College toronto, persuing diploma in
               Computer Programming. I am really interested in technologies and
               how they are created. I have worked with languages like Python,
               C/C++ and also made games and other Projects in Python.
@@ -127,9 +127,9 @@
             <p class="card__text center">
               This game is made using
               <strong>NEAT </strong>(NeuroEvolution of Augmenting Topologies)
-              and pygame. In NEAT the genrations of objects(paddle) get evolve
-              and at the some point the object become nearly perfect.That is the
-              final paddle, In the project.
+              and pygame. In NEAT the genrations of objects(bird) get evolve and
+              at the some point the last the one of the object becomes
+              perfect.That is the final bird, In the project.
             </p>
             <div class="card__button">
               <a
@@ -150,9 +150,9 @@
             <p class="card__text center">
               This game is made using
               <strong>NEAT </strong>(NeuroEvolution of Augmenting Topologies)
-              and pygame. In NEAT the genrations of objects(bird) get evolve and
-              at the some point the last the one of the object becomes
-              perfect.That is the final bird, In the project.
+              and pygame. In NEAT the genrations of objects(paddle) get evolve
+              and at the some point the object become nearly perfect.That is the
+              final paddle, In the project.
             </p>
             <div class="card__button">
               <a href="https://github.com/Tarun193/Pong-Game" target="_blank"
