--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
               This game is made using
               <strong>NEAT </strong>(NeuroEvolution of Augmenting Topologies)
               and pygame. In NEAT the genrations of objects(bird) get evolve and
-              at the some point the last the one of the object becomes
-              perfect.That is the final bird, In the project.
+              at some point the last the one of the object becomes perfect.That
+              is the final bird, In the project.
             </p>
             <div class="card__button">
               <a
@@ -151,7 +151,7 @@
               This game is made using
               <strong>NEAT </strong>(NeuroEvolution of Augmenting Topologies)
               and pygame. In NEAT the genrations of objects(paddle) get evolve
-              and at the some point the object become nearly perfect.That is the
+              and at some point the object become nearly perfect.That is the
               final paddle, In the project.
             </p>
             <div class="card__button">
