--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@
             <p class="card__text center">
               This game is made using
               <strong>NEAT </strong>(NeuroEvolution of Augmenting Topologies)
-              and pygame. In NEAT the genrations of objects(bird) get evolve and
-              at some point the last the one of the object becomes perfect.That
-              is the final bird, In the project.
+              and pygame. In NEAT the generations of objects(bird) get evolve
+              and at some point one generation of objects becomes nearly
+              perfect. form which the final bird taken and saved, In the
+              project.
             </p>
             <div class="card__button">
               <a
@@ -150,9 +151,9 @@
             <p class="card__text center">
               This game is made using
               <strong>NEAT </strong>(NeuroEvolution of Augmenting Topologies)
-              and pygame. In NEAT the genrations of objects(paddle) get evolve
-              and at some point the object become nearly perfect.That is the
-              final paddle, In the project.
+              and pygame. In NEAT the generations of objects(paddle) get evolve
+              and at some point one generation of objects become nearly perfect.
+              from which the final paddle is saved, In the project.
             </p>
             <div class="card__button">
               <a href="https://github.com/Tarun193/Pong-Game" target="_blank"
