added linkedin and git in hero section and some other minor changes

--- a/index.html
+++ b/index.html
@@ -29,10 +29,37 @@
     <main>
       <section class="hero">
         <section class="filter">
-          <h2 class="hero__greeting center">
-            <span class="nowrap"> 👋 Hi, I am </span>
-            <span class="nowrap"> Tarun Chawla </span>
-          </h2>
+          <div class="hero__container">
+            <h2 class="hero__greeting center">
+              <span class="nowrap"> 👋 Hi, I am </span>
+              <span class="nowrap"> Tarun Chawla </span>
+            </h2>
+            <section class="hero__social-media">
+              <div>
+                <a
+                  href="https://www.linkedin.com/in/tarun-chawla-4986291ab/"
+                  title="linkedin profile"
+                >
+                  <img
+                    src="img/linkedin.png"
+                    alt="linkedin"
+                    width="70px"
+                    height="70px"
+                  />
+                </a>
+              </div>
+              <div>
+                <a href="https://github.com/Tarun193" title="github profile">
+                  <img
+                    src="img/footer-github.png"
+                    alt="github"
+                    width="70px"
+                    height="70px"
+                  />
+                </a>
+              </div>
+            </section>
+          </div>
           <figure class="hero__figure">
             <img src="img/avtar.jpg" alt="avtar" width="400" height="400" />
             <figcaption class="offscreen">My avatar</figcaption>
