Changed layout of the website and resume

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 </a>
               </div>
             </section>
+            <a type="download" target="_blank" href="Resume.pdf">My Resume</a>
           </div>
           <figure class="hero__figure">
             <img src="img/avtar.jpg" alt="avtar" width="400" height="400" />
@@ -67,23 +68,6 @@
         </section>
       </section>
 
-      <article id="about" class="about">
-        <h2 class="about__h2 center">About</h2>
-        <section class="about__section">
-          <figure>
-            <img src="img/about.jpg" alt="about img" width="400" height="400" />
-          </figure>
-          <section class="about__text">
-            <p class="about__info">
-              I am a student at Georgian College toronto, persuing diploma in
-              Computer Programming. I am really interested in technologies and
-              how they are created. I have worked with languages like Python,
-              C/C++ and also made games and other Projects in Python.
-            </p>
-            <a type="download" target="_blank" href="Resume.pdf">My Resume</a>
-          </section>
-        </section>
-      </article>
       <article id="skills" class="skills">
         <h2 class="skills__h2 center">My Skills</h2>
         <div class="skills__container">
@@ -230,9 +214,25 @@
           </div>
         </div>
       </article>
-
+      <article id="about" class="about">
+        <h2 class="about__h2 center">About</h2>
+        <section class="about__section">
+          <figure>
+            <img src="img/about.jpg" alt="about img" width="400" height="400" />
+          </figure>
+          <section class="about__text">
+            <p class="about__info">
+              I am a student at Georgian College toronto, persuing diploma in
+              Computer Programming. I am really interested in technologies and
+              how they are created. I have worked with languages like Python,
+              C/C++ and also made games and other Projects in Python.
+            </p>
+            <a type="download" target="_blank" href="Resume.pdf">My Resume</a>
+          </section>
+        </section>
+      </article>
       <article class="contact" id="contact">
-        <h2 class="contact__h2 center">Contant Me 😉</h2>
+        <h2 class="contact__h2 center">Contact Me 😉</h2>
         <form>
           <p>
             <label for="firstname">First Name</label>
